--- a/index.html
+++ b/index.html
@@ -72,25 +72,25 @@
 									<p>Take a look at my projects on Github. Most of them are my self-made scripts related to cyber security including monitoring, OSINT, automation, and penetration testing. Also, I do CTF challenges and writeups whenever I'm free from work and school.</p>
 									<section class="features">
 										<article>
-											<a href="https://github.com/Ch3lLIST4/Gaidaros" class="image"><img src="./images/banner.jpg" alt="gaidaros" height="262.74" width="450.68"/></a>
+											<a href="https://github.com/Ch3lLIST4/Gaidaros" class="image"><img src="./images/banner.jpg" alt="gaidaros"/></a>
 											<h3 class="major">Gaidaros</h3>
 											<p>Gaidaros is designed to be a fast and simple open-source vulnerability security scanner and penetration testing tool concentrating on Apache Web Server.</p>
 											<a href="https://github.com/Ch3lLIST4/Gaidaros" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="image"><img src="./images/picoCTF2019.jpg" alt="ctf" height="262.74" width="450.68"/></a>
+											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="image"><img src="./images/picoCTF2019.jpg" alt="ctf"/></a>
 											<h3 class="major">CTF Writeups</h3>
 											<p>All of my CTF Writeups started from late 2019 to 2020. I'm not gonna post everything i did in here since it'll be a waste of time.</p>
 											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/Ch3lLIST4/MSSQLServer_JDBC" class="image"><img src="./images/mssql_logs.png" alt="db_logs" height="262.74" width="450.68"/></a>
+											<a href="https://github.com/Ch3lLIST4/MSSQLServer_JDBC" class="image"><img src="./images/mssql_logs.png" alt="db_logs"/></a>
 											<h3 class="major">Database monitor</h3>
 											<p>Some of my simple and versatile scripts for monitoring MSSQLServer using Java Code, tracing using JDBC.</p>
 											<a href="https://github.com/Ch3lLIST4/MSSQLServer_JDBC" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/Ch3lLIST4/OSINT_Scripts" class="image"><img src="./images/site.png"alt="osint" height="262.74" width="450.68"/></a>
+											<a href="https://github.com/Ch3lLIST4/OSINT_Scripts" class="image"><img src="./images/site.png"alt="osint"/></a>
 											<h3 class="major">OSINT Framework</h3>
 											<p>Simple OSINT related scripts for fast reconnaissance. Also, cryptography related scripts. And much more...</p>
 											<a href="https://github.com/Ch3lLIST4/OSINT_Scripts" class="special">Learn more</a>
