--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<article>
 											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="image"><img src="./images/picoCTF2019.jpg" alt="ctf"/></a>
 											<h3 class="major">CTF Writeups</h3>
-											<p>All of my CTF Writeups started from late 2019 to 2020. I'm not gonna post everything i did in here since it'll be a waste of time.</p>
+											<p>All of my CTF Writeups started from late 2019 to 2020. I'm not gonna post everything i did here since it'll be a waste of time.</p>
 											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="special">Learn more</a>
 										</article>
 										<article>
