--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Some of my projects</h2>
-									<p>Take a look at my projects on Github. Most of them are my self-made scripts related to cyber security including monitoring, OSINT, automation, and penetration testing. Also, I do CTF challenges and writeups whenever I'm free from work and school.</p>
+									<p>Take a look at some of my public projects on Github. Most of them are my self-made scripts related to cyber security including monitoring, OSINT, automation, and penetration testing. Also, I do CTF challenges and writeups whenever I'm free from work and school.</p>
 									<section class="features">
 										<article>
 											<a href="https://github.com/Ch3lLIST4/Gaidaros" class="image"><img src="./images/banner.jpg" alt="gaidaros"/></a>
