--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 						<!-- Three -->
 						<section id="three" class="wrapper spotlight style3">
 							<div class="inner">
-								<a href="https://discord.gg/EqgPTdp" class="image"><img src="./images/anonymous.png" alt="" /></a>
+								<a class="image"><img src="./images/anonymous.png" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Discord Server</h2>
 									<p>A private server sharing ethical-hacking knowledge in a variety of categories. We also play video games, hanging out and having fun. Or don't we ? </p>
-									<a href="https://discord.gg/EqgPTdp" class="special">Come Join us ?</a>
+									<a href="https://discord.gg/EqgPTdp" class="special">[Currently Closed]</a>
 								</div>
 							</div>
 						</section>
