--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<div class="content">
 									<h2 class="major">Discord Server</h2>
 									<p>A private server sharing ethical-hacking knowledge in a variety of categories. We also play video games, hanging out and having fun. Or don't we ? </p>
-									<a href="https://discord.gg/EqgPTdp" class="special">[Currently Closed]</a>
+									<a href="https://discord.gg/" class="special">[Currently Closed]</a>
 								</div>
 							</div>
 						</section>
