--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<a href="https://github.com/Ch3lLIST4" class="special">Learn more</a>
 									</div>
 								</div>
-							</section>
+							</section>                
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
@@ -73,37 +73,49 @@
 									<section class="features">
 										<article>
 											<a href="https://github.com/Ch3lLIST4/Gaidaros" class="image"><img src="./images/banner.jpg" alt="gaidaros"/></a>
-											<h3 class="major">Gaidaros</h3>
+											<h3 class="major">Gaidaros Scanner</h3>
 											<p>Gaidaros is designed to be a fast and simple open-source vulnerability security scanner and penetration testing tool concentrating on Apache Web Server.</p>
 											<a href="https://github.com/Ch3lLIST4/Gaidaros" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="image"><img src="./images/picoCTF2019.jpg" alt="ctf"/></a>
 											<h3 class="major">CTF Writeups</h3>
-											<p>All of my CTF Writeups started from late 2019 to 2020. I'm not gonna post everything i did here since it'll be a waste of time.</p>
+											<p>All of my CTF Writeups started from late 2019 to 2020. It takes time to post every solution here, so I might skip most of them.</p>
 											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/Ch3lLIST4/MSSQLServer_JDBC" class="image"><img src="./images/mssql_logs.png" alt="db_logs"/></a>
 											<h3 class="major">Database monitor</h3>
-											<p>Some of my simple and versatile scripts for monitoring MSSQLServer using Java Code, tracing using JDBC.</p>
+											<p>Some of my simple and versatile service scripts for monitoring MSSQL/MySQL database servers using Java Code, maintaining tracing files using JDBC.</p>
 											<a href="https://github.com/Ch3lLIST4/MSSQLServer_JDBC" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/Ch3lLIST4/OSINT_Scripts" class="image"><img src="./images/site.png"alt="osint"/></a>
 											<h3 class="major">OSINT Framework</h3>
-											<p>Simple OSINT related scripts for fast reconnaissance. Also, cryptography related scripts. And much more...</p>
+											<p>Simple OSINT Framework related scripts for a fast and overall reconnaissance phase.. Included in Gaidaros Scanner</p>
 											<a href="https://github.com/Ch3lLIST4/OSINT_Scripts" class="special">Learn more</a>
+                                        </article>
+                                        <article>
+											<a href="https://github.com/Ch3lLIST4/Crypto_scripts" class="image"><img src="./images/crypto.jpeg"alt="osint"/></a>
+											<h3 class="major">Cryptography Scripts</h3>
+											<p>Some of my handy handcrafted Cryptography tasks related scripts. Such as Ceasar, MD5/SHA hashing algorithms.. </p>
+											<a href="https://github.com/Ch3lLIST4/Crypto_scripts" class="special">Learn more</a>
+                                        </article>
+                                        <article>
+											<a href="https://github.com/Ch3lLIST4/Selenium_views" class="image"><img src="./images/automation.jpg"alt="osint"/></a>
+											<h3 class="major">Tasks Automation</h3>
+											<p>Also, automation scripts for daily tasks. I also develop Selenium bots for Web penetration testing process automation. And much more...</p>
+											<a href="https://github.com/Ch3lLIST4/Selenium_views" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
 										<li><a href="https://github.com/Ch3lLIST4?tab=repositories" class="button">Browse All</a></li>
 									</ul>
 								</div>
-							</section>
+                            </section>
 
-						<!-- Two -->
-						<section id="two" class="wrapper alt spotlight style2">
+						<!-- Three -->
+						<section id="three" class="wrapper spotlight style3">
 							<div class="inner">
 								<a href="https://github.com/Ch3lLIST4/Gaidaros" class="image"><img src="./images/gai.jpg" alt="" /></a>
 								<div class="content">
@@ -112,11 +124,15 @@
 									<a href="https://github.com/Ch3lLIST4/Gaidaros" class="special">Learn more</a>
 								</div>
 							</div>
-						</section>
+                        </section>
 
-						<!-- Three -->
-						<section id="three" class="wrapper spotlight style3">
-							<div class="inner">
+                        <section id="four" class="wrapper alt style1">
+                            <br>
+                        </section>
+
+                        <!-- Two -->
+						<section id="two" class="wrapper alt spotlight style2">
+                            <div class="inner">
 								<a class="image"><img src="./images/anonymous.png" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Discord Server</h2>
@@ -124,7 +140,8 @@
 									<a class="special">[Currently Closed]</a>
 								</div>
 							</div>
-						</section>
+                        </section>
+                        
 					</section>
 
 				<!-- Footer -->
