--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 										<article>
 											<a href="https://github.com/Ch3lLIST4/OSINT_Scripts" class="image"><img src="./images/site.png"alt="osint"/></a>
 											<h3 class="major">OSINT Framework</h3>
-											<p>Simple OSINT Framework related scripts for a fast and overall reconnaissance phase.. Included in Gaidaros Scanner</p>
+											<p>Simple OSINT Framework related scripts for a fast and overall reconnaissance phase... Included in Gaidaros Scanner.</p>
 											<a href="https://github.com/Ch3lLIST4/OSINT_Scripts" class="special">Learn more</a>
                                         </article>
                                         <article>
 											<a href="https://github.com/Ch3lLIST4/Crypto_scripts" class="image"><img src="./images/crypto.jpeg"alt="osint"/></a>
 											<h3 class="major">Cryptography Scripts</h3>
-											<p>Some of my handy handcrafted Cryptography tasks related scripts. Such as Ceasar, MD5/SHA hashing algorithms.. </p>
+											<p>Some of my handy handcrafted Cryptography tasks related scripts. Such as Ceasar, MD5/SHA hashing algorithms... </p>
 											<a href="https://github.com/Ch3lLIST4/Crypto_scripts" class="special">Learn more</a>
                                         </article>
                                         <article>
