--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 								<div class="content">
 									<h2 class="major">Discord Server</h2>
 									<p>A private server sharing ethical-hacking knowledge in a variety of categories. We also play video games, hanging out and having fun. Or don't we ? </p>
-									<a class="special">[Currently Closed]</a>
+									<a class="special">WHY</a>
 								</div>
 							</div>
                         </section>
