--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<div class="content">
 										<h2 class="major">About me</h2>
 										<p>A college student who passionates about programming and exploiting vulnerabilities in general. As an ambitious and diligent individual, I'm often recognized and evaluated by organizations for my commitment and abilities.</p>
-										<a href="./terminal/terminal-website/index.html" class="special">Access Terminal</a>
+										<a href="./terminal/terminal-website" class="special">Access Terminal</a>
 									</div>
 								</div>
 							</section>                
