--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 								<li><a href="#four">Projects</a></li>
 								<li><a href="#two">Groups</a></li>
 								<li><a href="#footer">Contact</a></li>
+								<li><a href="#:~:text=access%20terminal">Terminal</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
