--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#four">Projects</a></li>
 								<li><a href="#two">Groups</a></li>
 								<li><a href="#footer">Contact</a></li>
-								<li><a href="./terminal/terminal-website/">Terminal</a></li>
+								<li><a href="./terminal/">Terminal</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -61,7 +61,7 @@
 									<div class="content">
 										<h2 class="major">About me</h2>
 										<p>A college student who passionates about programming and exploiting vulnerabilities in general. As an ambitious and diligent individual, I'm often recognized and evaluated by organizations for my commitment and abilities.</p>
-										<a href="./terminal/terminal-website/" class="special">Access Terminal</a>
+										<a href="./terminal/" class="special">Access Terminal</a>
 									</div>
 								</div>
 							</section>                
