--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 										<article>
 											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="image"><img src="./images/picoCTF2019.jpg" alt="ctf"/></a>
 											<h3 class="major">CTF Writeups</h3>
-											<p>All of my CTF Writeups started from late 2019 to 2020. It takes time to post every solution here, so I might skip most of them.</p>
-											<a href="https://github.com/Ch3lLIST4/CTF-Writeups-2019" class="special">Learn more</a>
+											<p>All of my CTF Writeups started from late 2019 up til now. It takes time to post every solution here, so I might skip most of them.</p>
+											<a href="https://github.com/Ch3lLIST4/CTF-Writeups" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/Ch3lLIST4/MSSQLServer_JDBC" class="image"><img src="./images/mssql_logs.png" alt="db_logs"/></a>
